--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <a href="https://developer.android.com" target="_blank"><img src="images/android.jpg" alt="img01" height="900" width="900" />
+                            <a href="http://algebra1415011.github.io/ProjectsLists/github/projectList/" target="_blank"><img src="images/android.jpg" alt="img01" height="900" width="900" />
                             <figcaption></a>
                                 <h2><span>Projects</span></h2>
                                 <p>Projects</p>
