--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <a href="https://www.hackerearth.com/@avinashishobha" target="_blank"><img src="images/blog.png" alt="img01" height="310" width="310" />
+                            <a href="https://www.hackerearth.com/@algebra1415011" target="_blank"><img src="images/blog.png" alt="img01" height="310" width="310" />
                             <figcaption></a>
                                 <h2>Competitive <span>Coder</span></h2>
                                 <p>Competitive Coder</p>
