--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     </div>
                     
                 </div>
-				<p class="section-subtitle"><a href="https://drive.google.com/open?id=0B-ISJL7BeNrOOVZiamkxYmhnSEU" target="_blank">
+				<p class="section-subtitle"><a href="https://drive.google.com/drive/folders/0B-ISJL7BeNrOS1IzZ29WLXpOeFk" target="_blank">
                         		<i class="fa fa-cloud-download"> View Full CV</i>
                     			</a>
 
